--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=postgres
 
 spring.jpa.hibernate.ddl-auto=update
 string.jpa.show-sql=true
+
+spring.redis.host=localhost
+spring.redis.port=6379
